- Migrated Debian testsuite into the "tests" directory.
- Fixed typo in warning messages.
- Cause Makefile to create link needed for testing in "tests"
  directory when building insserv. Running distclean removes
  link to avoid cluttering archive.
- Fixed pushd() and popd() functions to avoid terminating insserv
  if the current working directory is inaccessible.
  Fixes Debian bug #573571.
- Updated warning message insserv disables when an init.d script
  is not executable, to better indicate the script will not
  be enabled at boot/entering runlevel.
  Closes Debian bug 661314.
- Applied patch from Bloeslaw Tokarski which should improve
  performance of insserv in some cases by bypassing unnecessary
  some fadvise calls.
  Closes Debian bug #775912
- Updated manual page with format changes. Applied
  patch from Bjarni Ingi Gislason which closes Debian
  bug #919610

-------------------------------------------------------------------
October 2018 - jsmith@resonatingmedia.com

- Added ability to run --dry-run and --show-all in addition to
  the existing --dryrun and --showall options.
  Closes Debian bug #580773
- Fixed compiler warnings when unused variables are defined in listing.h


-------------------------------------------------------------------
August 2018 - jsmith@resonatingmedia.com

- Updated insserv.c and listing.h to fix compile errors.
- Fixed Makefile so that all source dependencies are found.
- Allow CC to be defined outside of Makefile so we are not tied to GCC.
- Fixed function definitions, moved code (map_ functions) used in multiple 
  places out of insserv.c and into its own module called map.c
  Makes it easier to fix Makefile to build with modern systems/compilers.
- Cleaned up the last of the compiler errors on Clang and almost all the
  warnings from GCC.

-------------------------------------------------------------------
Sun Feb 16 19:16:10 CET 2014 - pere@hungry.com

- Next release will be 1.17.0.